--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,8 @@ spring:
       enabled: always
 
   datasource:
-    url: jdbc:h2:tcp://localhost/~/h2/db/etc
+#    url: jdbc:h2:tcp://localhost/~/h2/db/etc
+    url: jdbc:h2:mem:testdb
     username: sa
     password:
     driver-class-name: org.h2.Driver
